--- a/website-guts/assets/css/modules/opticon-footer.scss
+++ b/website-guts/assets/css/modules/opticon-footer.scss
@@ -1,7 +1,8 @@
 #opticon-footer {
-  background: #EAF4F3;
-  height: 400px;
+  background: $faint-gray-bg;
+  height: 285px;
   width: 100%;
+  border-top: solid 1px $faint-gray-border;
   .nav-text-item {
     margin: 15px 0;
     font-size: 0.938em;
@@ -12,8 +13,12 @@
     &:hover {
       text-decoration: none;
     }
-    &.body-button {
-      color: $opticon-brand-blue;
+    &.body-button--nav {
+    margin: 0 0 0 15px;
+    color: $light-text-color;
+    padding: 5px 17px;
+    border: 1px solid $light-text-color;
+    border-radius: 3px;
     }
   }
   .social {
@@ -22,6 +27,7 @@
     width: 35px;
     height: 35px;
     margin: 10px;
+    display: none;
   }
   .social-container {
     display: flex;
@@ -37,8 +43,8 @@
 
 @media only screen and (min-width: $tablet-min-width) {
   #opticon-footer {
-    height: 200px;
-    padding: 10px 0;
+    height: 140px;
+    padding: 25px 0;
     border-bottom: 1px solid #ccc;
     .opticon-flex-container {
       display: flex;
@@ -52,7 +58,7 @@
       flex: 1;
     }
     .nav-text-item {
-      margin: 0 30px;
+      margin: 0 15px;
       font-size: 1.338em;
     }
     .twitter {
