--- a/website-guts/assets/css/pages/opticon-homepage.scss
+++ b/website-guts/assets/css/pages/opticon-homepage.scss
@@ -1,12 +1,11 @@
 body.opticon-homepage {
   .title-section {
-    background: $opticon-light-blue;
-    padding: 50px 0;
+    padding: 100px 0 0 0;
   }
   .page-title {
-    font-size: 3em;
+    font-size: 2.6em;
     background: $opticon-brand-blue;
-    padding: 0 15px 0 25px;
+    padding: 15px 20px 0px 20px;
     margin: 0;
   }
   .event-details {
@@ -48,7 +47,7 @@ body.opticon-homepage {
     padding: 50px 0 80px 0;
   }
   .track-container {
-    padding: 75px 10px 10px 10px;
+    padding: 90px 10px 30px 10px;
     text-align: center;
     background-repeat: no-repeat;
     background-position: top center;
@@ -76,7 +75,7 @@ body.opticon-homepage {
     }
     .track-container {
       width: 25%;
-      padding: 75px 10px 10px 10px;
+      padding: 115px 10px 10px 10px;
     }
     .content-container {
       h1,
@@ -89,14 +88,21 @@ body.opticon-homepage {
     .page-title {
       font-size: 4em;
     }
+    .register-title {
+      width: 50%;
+    }
   }
 }
+
 
 @media only screen and (min-width: $desktop-min-width) {
   body.opticon-homepage {
     .description {
       padding: 5% 0;
       width: 600px;
+    }
+    .track-container {
+      padding: 115px 10px 30px 10px;
     }
   }
 }
